--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -32,7 +32,7 @@
     <filter-class>org.easyframework.web.mvc.DispatcherFilter</filter-class>
     <init-param>
       <param-name>base-package</param-name>
-      <param-value>demo.rest</param-value>
+      <param-value>demo</param-value>
     </init-param>
     <init-param>
     	<param-name>view-prefix</param-name>
